[package]
name = "vearch-sdk-rs"
version = "3.5.0"
edition = "2024"
description = "Rust SDK for Vearch vector database"
license = "Apache-2.0"
keywords = ["vearch", "vector", "database", "search", "ai"]
categories = ["database-implementations", "api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
futures = "0.3"
